--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/zap (1).ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EnergyWatch - Smart Energy Monitoring</title>
+    <title>Solarios - Smart Energy Monitoring</title>
     <meta name="description" content="Monitor your home energy consumption, solar production, and optimize your energy usage with real-time analytics and smart insights." />
-    <meta name="author" content="EnergyWatch" />
+    <meta name="author" content="Solarios" />
 
-    <meta property="og:title" content="EnergyWatch - Smart Energy Monitoring" />
+    <meta property="og:title" content="Solarios - Smart Energy Monitoring" />
     <meta property="og:description" content="Monitor your home energy consumption, solar production, and optimize your energy usage with real-time analytics and smart insights." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
